--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
                         <div class="p-5"><div id="carousel-films" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/whitney.jpeg" class="d-block w-100" alt="...">
+                                    <img src="assets/img/whitney.jpeg" class="d-block w-100" alt="whitney houston">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets/img/kevin.webp" class="d-block w-100" alt="...">
+                                    <img src="assets/img/kevin.webp" class="d-block w-100" alt="kevin costner">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets/img/jennifer.jpeg" class="d-block w-100" alt="...">
+                                    <img src="assets/img/jennifer.jpeg" class="d-block w-100" alt="jennifer grey">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets/img/patrick.webp" class="d-block w-100" alt="...">
+                                    <img src="assets/img/patrick.webp" class="d-block w-100" alt="partrick swayze">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets/img/mila.webp" class="d-block w-100" alt="...">
+                                    <img src="assets/img/mila.webp" class="d-block w-100" alt="mila kunis">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets/img/justin.jpeg" class="d-block w-100" alt="...">
+                                    <img src="assets/img/justin.jpeg" class="d-block w-100" alt="justin timberlake">
                                 </div>
                             </div>
                             <!-- Slider controls -->
@@ -100,7 +100,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img src="assets/img/the bodyguard.jpeg" alt="..." /></div>
+                        <div class="p-5"><img src="assets/img/the bodyguard.jpeg" alt="the bodyguard movie poster" /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -119,7 +119,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img src="assets/img/dirty dancing.jpeg" alt="..." /></div>
+                        <div class="p-5"><img src="assets/img/dirty dancing.jpeg" alt="dirty dancing movie poster" /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -138,7 +138,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img src="assets/img/Friends_with_benefits_poster.jpg" alt="..." /></div>
+                        <div class="p-5"><img src="assets/img/Friends_with_benefits_poster.jpg" alt="friends with benefits movie poster" /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
